Functionality to Create New post by multiple users

--- a/flask_blog/templates/about.html
+++ b/flask_blog/templates/about.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div>
         <h1>
-            This is a Nice Title page
+            This is a Nice About Page
         </h1>
     </div>     
 {% endblock content %}
