--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -32,6 +32,7 @@
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="/post/new">New Post</a>
                 <a class="nav-item nav-link" href="/account">Account</a>
                   <a class="nav-item nav-link" href="/logout">Logout</a>
                 {% else %}
@@ -55,9 +56,7 @@
               {% endfor %}
             {% endif %}
             {% endwith %}
-            <p>CHECK SOME PARAGREAP</p>
             {% block content %}{% endblock %}
-            
           </div>
 
           <!-- This is Additional bit for sidebar addition -->
