--- a/flask_blog/templates/post.html
+++ b/flask_blog/templates/post.html
@@ -1,16 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
     <div>
-        <h1>
-            This is a nice page
-        </h1>
-    </div>
-    <div>
-        {% for post in posts %}
-        <!-- <h2> {{ post.title }} </h2>
-        <h3> By {{post.author}} </h3>
-        <p> {{post.content}} </p> -->
-
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ url_for('static',  filename='profile_pics/' + post.author.image_file) }}" >
             <div class="media-body">
@@ -18,16 +8,10 @@
                 <a class="mr-2" href="#">{{ post.author.username }}</a>
                 <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
               </div>
-              <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+              <h2 class="article-title" >{{ post.title }}</h2>
               <p class="article-content">{{ post.content }}</p>
             </div>
           </article>
-          
-
-        {% endfor %}
     </div> 
-    <p>
-        WhatEver I write, it's as long as I am inside this parent div element, my contents are autpmacially padded. and formatted
-    </p>
 {% endblock content %}
 
