--- a/flask_blog/templates/post.html
+++ b/flask_blog/templates/post.html
@@ -5,13 +5,24 @@
             <img class="rounded-circle article-img" src="{{ url_for('static',  filename='profile_pics/' + post.author.image_file) }}" >
             <div class="media-body">
               <div class="article-metadata">
-                <a class="mr-2" href="#">{{ post.author.username }}</a>
+                <a class="mr-2" href="{{ url_for( 'user_posts' , username=post.author.username ) }}">{{ post.author.username }}</a>
                 <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
+                <small class="text-muted">|| last updated : {{ post.last_updated.strftime('%Y-%m-%d') }}</small>
+
+                {% if post.author == current_user %}
+                <div>
+                  <a href="{{ url_for('update_post' , post_id=post.id ) }}" class="btn btn-secondary btn-sm m-1">Update</a>
+                  <form action="{{ url_for('delete_post' , post_id=post.id ) }}">
+                    <input type="submit" value="Delete" class="btn btn-danger"/>
+                </form>
+                </div>
+                {% endif %}
+
               </div>
               <h2 class="article-title" >{{ post.title }}</h2>
               <p class="article-content">{{ post.content }}</p>
             </div>
           </article>
-    </div> 
+    </div>
 {% endblock content %}
 
