--- a/flask_blog/templates/user_post.html
+++ b/flask_blog/templates/user_post.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <div>
+        <h1>Posts By : {{ user.username }} ({{ posts.total }})</h1>
         {% for post in posts.items %}
         <!-- <h2> {{ post.title }} </h2>
         <h3> By {{post.author}} </h3>
@@ -24,9 +25,9 @@
           {% if page_num %}
             <!-- Highlight Current Page Differently than rest of page numbers -->
             {% if page_num == posts.page %}
-            <a class="btn btn-info mb-4" href="{{ url_for( 'home' , page_num=page_num ) }}">{{ page_num }}</a>
+            <a class="btn btn-info mb-4" href="{{ url_for( 'user_posts' , page_num=page_num, username=user.username ) }}">{{ page_num }}</a>
             {% else %}
-            <a class="btn mb-4" href="{{ url_for( 'home' , page_num=page_num ) }}">{{ page_num }}</a>
+            <a class="btn mb-4" href="{{ url_for( 'user_posts' , page_num=page_num, username=user.username ) }}">{{ page_num }}</a>
             {% endif %}
             
           {% else %}
